--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,26 @@
     </properties>
 
     <dependencies>
-
+        <!-- Jetty dependency -->
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>9.4.50.v20221201</version>
+        </dependency>
     </dependencies>
 
     <build>
-
+        <plugins>
+            <!-- Defines CI-server as mainClass -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>se.ciserver.ContinuousIntegrationServer</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
