feat(ci-server): set github commit status (#36)
CLOSES #11 
Does not implement some items that require other issues to be completed.

## What does this PR do?
Adds functionality to use Github's REST api to set the status of
commits. After a push is received, the status of the commit is set
depending on test results.

## Why is this change needed?
Required for P3 (core CI feature #3 - notification) of the DD2480
assignment. The CI server supports notification of CI results.

## How to test
Create a [github access
token](https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens)
with commit status permission for a repository. Run the CI server for
that repository using
```bash
mvn exec:java -Dexec.mainClass=ci_server.Main -Dexec.args="<GITHUB ACCESS TOKEN>"
```
When a push is made, the status of the commit will be set.

## Checklist
- [x] PR title follows Conventional Commits
- [x] Code is covered by tests (if applicable)
- [x] Documentation updated (if applicable)
- [x] Linked issue(s)

---------

Co-authored-by: Erik Olsson <eolsson5@kth.se>

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>jetty-server</artifactId>
             <version>9.4.50.v20221201</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-client</artifactId>
+            <version>9.4.50.v20221201</version>
+        </dependency>
+
 
         <!-- Jackson dependency (For JSON parsing) -->
         <!-- Source: https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
